--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="210177835" />
 
 
 <title>UK Energy Production by Source from 1985-2021</title>
@@ -168,7 +169,7 @@ pre code {
 
 
 <h1 class="title toc-ignore">UK Energy Production by Source from 1985-2021</h1>
-<h4 class="author"></h4>
+<h4 class="author">210177835</h4>
 <h4 class="date">27/04/2022</h4>
 
 </div>
@@ -202,8 +203,8 @@ pre code {
 </ul></li>
 <li><a href="#summary"><span class="toc-section-number">5</span> summary</a>
 <ul>
-<li><a href="#what-i-have-learnt"><span class="toc-section-number">5.1</span> What I have learnt</a></li>
-<li><a href="#what-i-would-do-next"><span class="toc-section-number">5.2</span> What I would do next</a></li>
+<li><a href="#what-i-have-learnt"><span class="toc-section-number">5.0.1</span> What I have learnt</a></li>
+<li><a href="#what-i-would-do-next"><span class="toc-section-number">5.0.2</span> What I would do next</a></li>
 </ul></li>
 </ul>
 </div>
@@ -445,13 +446,14 @@ shinyApp(ui, server)</code></pre>
 <div id="summary" class="section level1" number="5">
 <h1 number="5"><span class="header-section-number">5</span> summary</h1>
 <p>My visualisations did provide answers to my research questions. There are apparent changes in the amount of energy different sources produced from 1985 to 2021, with coal showing a massive decrease from 177.16 TWH in 1985, to 5.98 TWH in 2021. As well as Wind, Solar and other Renewable energy sources showing a general increase in recent years.</p>
-<div id="what-i-have-learnt" class="section level2" number="5.1">
-<h2 number="5.1"><span class="header-section-number">5.1</span> What I have learnt</h2>
+<div id="what-i-have-learnt" class="section level3" number="5.0.1">
+<h3 number="5.0.1"><span class="header-section-number">5.0.1</span> What I have learnt</h3>
 <p>During this project I’ve learnt how process data to plot it in different ways, how to create basic visualisations as well as more advanced interactive plots with user interface and animated plots. This project has provided me with transferable skills that I will definitely be using in future coursework and my dissertation, as well as potential future careers.</p>
 </div>
-<div id="what-i-would-do-next" class="section level2" number="5.2">
-<h2 number="5.2"><span class="header-section-number">5.2</span> What I would do next</h2>
+<div id="what-i-would-do-next" class="section level3" number="5.0.2">
+<h3 number="5.0.2"><span class="header-section-number">5.0.2</span> What I would do next</h3>
 <p>If I had more time I’d of liked to look at energy produced by the different sources from different countries and be able to develop an interactive plot that allows you to compare on the same graph different energy source productions from different countries</p>
+<p>The git hub repository for this project can be found <a href="https://github.com/DaisyReach/PSY6422_project">here</a></p>
 </div>
 </div>
 
